# syntek-modules

./: .coveragerc  .dockerignore  .editorconfig  .env.dev.example  .env.pentest.example  .env.production.example  .env.staging.example  .env.test.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICK-START.md  README.md  RELEASES.md  SECURITY.md  TYPE_ERROR_FIX_PLAN.md  VERSION-HISTORY.md  conftest.py  deny.toml  docker-compose.yml  eslint.config.js  eslint.config.mjs  install-cli.sh  install.sh  lefthook.yml  package.json  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  (+3 more)
.claude/plugins/: Cargo.toml  README.md  ab-test-tool.py  chrome-tool.py  db-tool.py  ddev-tool.py  docker-tool.py  env-tool.py  feedback-tool.py  git-tool.py  log-tool.py  metrics-tool.py  optimiser-tool.py  pm-tool.py  project-tool.py  quality-tool.py
.claude/plugins/src/: audit_tool.rs  cargo_tool.rs  compliance_tool.rs  fuzzer_tool.rs  rustc_tool.rs  vuln_db_tool.rs
backend/captcha/: README.md  pyproject.toml
backend/captcha/syntek_captcha/: __init__.py  apps.py
backend/captcha/syntek_captcha/services/: __init__.py  captcha_service.py
backend/captcha/syntek_captcha/tests/: __init__.py
backend/compliance/: README.md  pyproject.toml
backend/compliance/gdpr/: README.md  pyproject.toml
backend/compliance/gdpr/syntek_gdpr/: apps.py
backend/compliance/legal/: README.md  pyproject.toml
backend/compliance/legal/syntek_legal/: apps.py
backend/i18n/: pyproject.toml
backend/media/: pyproject.toml
backend/search/: pyproject.toml
backend/security-auth/authentication/: DATA_RETENTION_POLICY.md  DATA_RETENTION_POLICY_EU.md  DATA_RETENTION_POLICY_USA.md  PHASE1-IMPLEMENTATION-SUMMARY.md  README.md  __init__.py  apps.py  pyproject.toml
backend/security-auth/authentication/syntek_authentication/: __init__.py
backend/security-auth/authentication/tests/: __init__.py  conftest.py  test_email_encryption_service.py  test_gdpr_services.py  test_phone_verification_service.py  test_recovery_key_service.py  test_session_security_service.py
backend/security-auth/mfa/: README.md  pyproject.toml
backend/security-auth/mfa/syntek_mfa/: __init__.py  apps.py
backend/security-input/: pyproject.toml
backend/security-input/validators/: __init__.py  email.py
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/commands/: init.rs  install.rs  mod.rs  verify.rs
cli/src/config/: auth_config.rs  generator.rs  loader.rs  mod.rs  templates.rs  validator.rs
cli/src/install/: auth.rs  backend.rs  frontend.rs  graphql.rs  mod.rs  rust.rs
cli/src/security/: env.rs  mod.rs  permissions.rs  secrets.rs
cli/src/utils/: error.rs  exec.rs  fs.rs  mod.rs  path.rs
graphql/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
graphql/audit/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
graphql/audit/syntek_graphql_audit/: __init__.py  schema.py
graphql/audit/syntek_graphql_audit/queries/: __init__.py  audit.py
graphql/audit/syntek_graphql_audit/types/: __init__.py  audit.py
graphql/auth/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
graphql/auth/syntek_graphql_auth/: __init__.py  schema.py
graphql/auth/syntek_graphql_auth/mutations/: __init__.py  auth.py  gdpr.py  gdpr_social_extensions.py  ip_management.py  phone.py  recovery.py  session.py  session_security.py  social.py  social_account_mgmt.py  social_auth.py  totp.py
graphql/auth/syntek_graphql_auth/queries/: __init__.py  config.py  gdpr.py  ip_management.py  mfa.py  (+4 more)
graphql/compliance/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
graphql/compliance/syntek_graphql_compliance/: __init__.py  schema.py
graphql/core/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
graphql/core/syntek_graphql_core/: __init__.py  errors.py  permissions.py  security.py
graphql/examples/: README.md  authentication_flow.py  django_integration.py  selective_installation.py  unified_schema.py
graphql/tests/: __init__.py
rust/: .gitignore  Cargo.toml  README.md  SECURITY-TESTING.md
rust/auth-pentest/: .env.pentest.example  CI-INTEGRATION.md  Cargo.toml  README.md
rust/auth-pentest/src/: config.rs  lib.rs  runner.rs
rust/encryption/: Cargo.toml  FFI-SECURITY.md  README.md
rust/encryption/src/: batch.rs  field_level.rs  key_management.rs  lib.rs  validators.rs  versioning.rs
rust/hashing/: Cargo.toml
rust/hashing/src/: lib.rs
rust/llm_gateway/: Cargo.toml
rust/llm_gateway/src/: lib.rs  rate_limiting.rs  streaming.rs
rust/project-cli/: Cargo.toml  README.md
rust/project-cli/src/: main.rs
rust/pyo3_bindings/: Cargo.toml
rust/pyo3_bindings/src/: auth.rs  encryption.rs  hashing.rs  lib.rs  llm.rs  security.rs
rust/security/: Cargo.toml  README.md
rust/security/src/: constant_time.rs  hmac.rs  lib.rs  memory.rs  oauth.rs  random.rs  tokens.rs  zeroize.rs
rust/syntek-crypto/: Cargo.toml  syntek.manifest.toml
rust/syntek-crypto/examples/: .gitkeep
rust/syntek-crypto/src/: aes_gcm.rs  key_versioning.rs  lib.rs
rust/syntek-crypto/tests/: crypto_tests.proptest-regressions  crypto_tests.rs  key_versioning_tests.rs
rust/syntek-dev/: Cargo.toml
rust/syntek-dev/src/: cli.rs  config.rs  main.rs  process.rs  ui.rs
rust/syntek-graphql-crypto/: Cargo.toml  syntek.manifest.toml
rust/syntek-graphql-crypto/src/: lib.rs
rust/syntek-graphql-crypto/tests/: middleware_tests.rs
rust/syntek-manifest/: Cargo.toml
rust/syntek-manifest/src/: duplicate_detector.rs  error.rs  lib.rs  manifest.rs  parser.rs  post_install.rs  prompter.rs  provider_wrapper.rs  settings_writer.rs
rust/syntek-manifest/tests/: duplicate_detector_tests.rs  parser_tests.rs  post_install_tests.rs  prompter_tests.rs  provider_wrapper_tests.rs  settings_writer_tests.rs
rust/syntek-pyo3/: Cargo.toml  pyproject.toml  syntek.manifest.toml
rust/syntek-pyo3/src/: lib.rs
rust/syntek-pyo3/tests/: pyo3_module_tests.rs
(+754 files in other folders)
