[workspace]
resolver = "2"
members = [
    "rust/syntek-crypto",
    "rust/syntek-pyo3",
    "rust/syntek-graphql-crypto",
    "rust/syntek-dev",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Syntek Development Team"]
license = "AGPL-3.0"
repository = "https://git.syntek-studio.com/syntek/syntek-modules"

[workspace.dependencies]
# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "color"] }

# PyO3
pyo3 = { version = "0.28", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
