# uv workspace root — not a deployable app; shared tooling config only
[project]
name = "syntek-modules-workspace"
version = "0.17.1"
description = "Workspace root — development tooling only, not published"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
package = false

[tool.uv.sources]
# Declare workspace packages so `uv sync --group dev` installs them as editable.
# Add a new entry here each time a package is added to packages/backend/*.
syntek-pyo3 = {workspace = true}
syntek-auth = {workspace = true}
syntek-graphql-crypto = {workspace = true}
syntek-security = {workspace = true}

[tool.uv.workspace]
# rust/syntek-pyo3 uses maturin as its build backend — uv calls maturin via PEP 517
# to compile the Rust extension and install it into the venv automatically.
members = ["packages/backend/*", "rust/syntek-pyo3"]
# packages/backend/syntek-pyo3 is a tests-only stub with no Python source and the
# wrong build backend (hatchling). The real buildable package is rust/syntek-pyo3.
exclude = ["packages/backend/syntek-pyo3"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting for all Python code
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py314"
src = ["packages/backend"]
indent-width = 4
exclude = ["**/migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "DJ",  # flake8-django
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "DJ001", # null=True on string fields — intentional in some cases
    "S101",  # assert — allowed in tests
    "S311",  # random — not used for crypto; we use Rust for all crypto
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101", "ARG001", "ARG002", "S106", "E501", "TC002"]
"*/migrations/*" = ["E501", "N806", "RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
omit = ["*/migrations/*", "*/test_integration_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--tb=short", "-v"]
testpaths = ["tests", "packages/backend"]
markers = [
    "unit: Unit tests — fast, no I/O",
    "integration: Integration tests — may use DB or external services",
    "e2e: End-to-end tests",
    "slow: Tests that take more than 1s",
]

# ---------------------------------------------------------------------------
# Dependency groups (uv PEP 735) — workspace-level test tooling
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "ruff>=0.9",
    "basedpyright>=1.29",
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
    "factory-boy>=3.3",
    "testcontainers>=4.0",
    "hypothesis>=6.0",
    "pyyaml>=6.0",
    "django-stubs[compatible-mypy]>=5.0",
    "maturin>=1.8",
    # Workspace packages — installed as editable so basedpyright and pytest can
    # import them without a separate install step. syntek-pyo3 is built from Rust
    # via maturin (uv invokes maturin automatically via PEP 517).
    # Add each new packages/backend/* entry here as the package is created.
    "syntek-pyo3",
    "syntek-auth",
    "syntek-graphql-crypto",
    "syntek-security",
    "pyotp>=2.9.0",
    "freezegun>=1.5.5",
    "cryptography>=46.0.5",
    "responses>=0.26.0",
    "psycopg[binary]>=3.3.3",
]
