[package]
name = "syntek-cli"
version = "0.1.0"
edition = "2021"
authors = ["Syntek Team"]
description = "CLI tool for installing Syntek modules across backend, web, mobile, and Rust layers"
license = "MIT"

[[bin]]
name = "syntek"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal interaction
rpassword = "7.3"
console = "0.15"
indicatif = "0.17"
colored = "2.1"

# File operations
walkdir = "2.5"
tempfile = "3.13"

# Signal handling
ctrlc = "3.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for pattern matching
regex = "1.11"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "signal"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
