[workspace]
members = [
    "encryption",
    "security",
    "hashing",
    "llm_gateway",
    "pyo3_bindings",
    "project-cli",
    "auth-pentest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
authors = ["Syntek Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Cryptography
ring = "0.17"
chacha20poly1305 = "0.10"
argon2 = "0.5"
blake3 = "1.5"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"
rand = "0.8"

# Memory safety
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"

# PyO3 for Python bindings (supports Python 3.14)
pyo3 = { version = "0.28", features = ["extension-module"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (if needed)
tokio = { version = "1.42", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true  # Keep overflow checks in release

[profile.dev]
opt-level = 0
overflow-checks = true
