[package]
name = "syntek-rust-security-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"

[[bin]]
name = "cargo-metadata-tool"
path = "src/cargo_tool.rs"

[[bin]]
name = "rustc-version-tool"
path = "src/rustc_tool.rs"

[[bin]]
name = "vuln-db-tool"
path = "src/vuln_db_tool.rs"

[[bin]]
name = "audit-tool"
path = "src/audit_tool.rs"

[[bin]]
name = "fuzzer-tool"
path = "src/fuzzer_tool.rs"

[[bin]]
name = "compliance-tool"
path = "src/compliance_tool.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.19"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
