[project]
name = "syntek-compliance"
version = "1.0.0"
description = "Compliance bundle - GDPR and legal document management"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Syntek Dev", email = "dev@syntek.com"}
]
keywords = ["django", "compliance", "gdpr", "legal", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 6.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "django>=6.0.2",
    "syntek-gdpr>=1.0.0",
    "syntek-legal>=1.0.0",
    "syntek-authentication>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
