[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntek-security-input"
version = "0.1.0"
description = "Syntek security-input security bundle for Django"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Syntek Team", email = "dev@syntek.io"}
]
keywords = ["syntek", "django", "security", "security-input"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "django>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.10.0",
    "pyright>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/syntek/syntek-modules"
Repository = "https://github.com/syntek/syntek-modules"
Issues = "https://github.com/syntek/syntek-modules/issues"

[tool.setuptools]
packages = ["syntek_security_input"]

[tool.setuptools.package-dir]
syntek_security_input = "."

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = ["**/migrations/**", "**/tests/**"]
