[project]
name = "syntek-graphql-auth"
version = "2.0.0"
description = "GraphQL authentication and authorization layer for Syntek applications"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Syntek Development Team", email = "dev@syntek.dev" }
]
keywords = [
    "graphql",
    "authentication",
    "authorization",
    "strawberry",
    "django",
    "jwt",
    "totp",
    "2fa",
    "mfa",
    "sessions",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: GraphQL",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

dependencies = [
    "django>=6.0.2",
    "strawberry-graphql>=0.291.0",
    "syntek-graphql-core>=1.0.0",
    "syntek-authentication>=1.0.0",
    "syntek-sessions>=1.0.0",
    "syntek-jwt>=1.0.0",
    "syntek-mfa>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
    "mypy>=1.15.0",
    "ruff>=0.9.1",
    "django-stubs>=5.3.1",
]

[project.urls]
Homepage = "https://github.com/syntek/syntek-modules"
Documentation = "https://docs.syntek.dev/graphql/auth"
Repository = "https://github.com/syntek/syntek-modules"
Issues = "https://github.com/syntek/syntek-modules/issues"
Changelog = "https://github.com/syntek/syntek-modules/blob/main/graphql/auth/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["syntek_graphql_auth"]

[tool.hatch.build.targets.sdist]
include = [
    "/syntek_graphql_auth",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "S101",    # use of assert detected (pytest)
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*.py" = ["S101", "ANN"]  # pytest uses assert

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = "strawberry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syntek_authentication.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syntek_sessions.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syntek_jwt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syntek_mfa.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = [
    "--cov=syntek_graphql_auth",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["syntek_graphql_auth"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
