[package]
name = "syntek-hashing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Password hashing for Syntek (Argon2id, bcrypt)"

[dependencies]
argon2.workspace = true
blake3.workspace = true
zeroize.workspace = true
thiserror.workspace = true
serde.workspace = true
rand = "0.8"
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
