[package]
name = "syntek-llm-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM abstraction layer for Syntek (provider-agnostic: OpenAI, Anthropic, Mistral, self-hosted)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
