[package]
name = "syntek-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "syntek"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "3.0"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Process management
tokio = { workspace = true, features = ["process", "fs", "io-util"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.9"

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Date/time for audit reports
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
